--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,35 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+
 # Dependencies
-node_modules/
+node_modules
+.pnp
+.pnp.js
 
-# Build output
-dist/
-build/
-release/
+# Build
+dist
+release
 
-# IDE
-.vscode/
-.idea/
+# Editor
+.vscode
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Environment
+# Env
 .env
 .env.local
-.env.*.local
+.env.production
 
-# Logs
-*.log
-npm-debug.log*
+# Electron
+electron/dist
 
-# TypeScript
-*.tsbuildinfo
-
-# Vite
-vite.config.ts.timestamp-*
+# Misc
+build_log.txt
+build_errors.txt
