--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0",
-    "tldraw": "^2.0.0-alpha.19"
+    "tldraw": "^2.0.0-alpha.19",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
