--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     }
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.96.0",
     "framer-motion": "^12.29.3",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
