--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.96.0",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.29.3",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
@@ -58,6 +59,7 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
