--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron .\"",
     "electron:build": "npm run build && electron-builder",
-    "electron:preview": "npm run build && electron ."
+    "electron:preview": "npm run build && electron .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --max-warnings 0",
+      "bash -c 'tsc --noEmit'"
+    ]
   },
   "build": {
     "appId": "com.mathstudio.app",
@@ -49,12 +56,14 @@
     }
   },
   "dependencies": {
+    "@sentry/react": "^10.39.0",
     "@supabase/supabase-js": "^2.96.0",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.29.3",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^3.7.0",
     "tldraw": "^2.0.0-alpha.19",
     "zustand": "^5.0.11"
   },
@@ -73,6 +82,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
