feat: add tokushoho page, fix stripe auth, update google redirect, remove electron

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "description": "MathStudio - Interactive Math Learning App",
   "author": "MathStudio Team",
-  "main": "electron/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,9 +12,6 @@
     "test": "vitest",
     "gen-types": "npx supabase gen types typescript --project-id rnzpazlgjxdoyakuiixq --schema public > src/lib/database.types.ts",
     "preview": "vite preview",
-    "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron .\"",
-    "electron:build": "npm run build && electron-builder",
-    "electron:preview": "npm run build && electron .",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -23,39 +19,6 @@
       "eslint --max-warnings 0",
       "bash -c 'tsc --noEmit'"
     ]
-  },
-  "build": {
-    "appId": "com.mathstudio.app",
-    "productName": "MathStudio",
-    "directories": {
-      "output": "release"
-    },
-    "files": [
-      "dist/**/*",
-      "electron/**/*"
-    ],
-    "win": {
-      "target": [
-        "nsis"
-      ],
-      "icon": "public/icon.ico"
-    },
-    "mac": {
-      "target": [
-        "dmg"
-      ],
-      "icon": "public/icon.icns"
-    },
-    "linux": {
-      "target": [
-        "AppImage"
-      ],
-      "icon": "public/icon.png"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true
-    }
   },
   "dependencies": {
     "@sentry/react": "^10.39.0",
@@ -79,10 +42,6 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "concurrently": "^9.2.1",
-    "cross-env": "^7.0.3",
-    "electron": "^40.1.0",
-    "electron-builder": "^26.7.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -95,7 +54,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^4.0.18",
-    "wait-on": "^9.0.3"
+    "vitest": "^4.0.18"
   }
 }
